@@ -1,10 +1,12 @@
 package org.openmetadata.service.search;
 
+import static org.openmetadata.common.utils.CommonUtil.listOrEmpty;
 import static org.openmetadata.common.utils.CommonUtil.nullOrEmpty;
+import static org.openmetadata.search.IndexMapping.INDEX_NAME_SEPARATOR;
 import static org.openmetadata.service.Entity.AGGREGATED_COST_ANALYSIS_REPORT_DATA;
 import static org.openmetadata.service.Entity.ENTITY_REPORT_DATA;
 import static org.openmetadata.service.Entity.FIELD_DISPLAY_NAME;
-import static org.openmetadata.service.Entity.FIELD_DOMAIN;
+import static org.openmetadata.service.Entity.FIELD_DOMAINS;
 import static org.openmetadata.service.Entity.FIELD_FOLLOWERS;
 import static org.openmetadata.service.Entity.FIELD_FULLY_QUALIFIED_NAME;
 import static org.openmetadata.service.Entity.FIELD_NAME;
@@ -14,7 +16,10 @@ import static org.openmetadata.service.Entity.QUERY;
 import static org.openmetadata.service.Entity.RAW_COST_ANALYSIS_REPORT_DATA;
 import static org.openmetadata.service.Entity.WEB_ANALYTIC_ENTITY_VIEW_REPORT_DATA;
 import static org.openmetadata.service.Entity.WEB_ANALYTIC_USER_ACTIVITY_REPORT_DATA;
+import static org.openmetadata.service.search.SearchClient.ADD_DOMAINS_SCRIPT;
+import static org.openmetadata.service.search.SearchClient.ADD_FOLLOWERS_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.ADD_OWNERS_SCRIPT;
+import static org.openmetadata.service.search.SearchClient.DATA_ASSET_SEARCH_ALIAS;
 import static org.openmetadata.service.search.SearchClient.DEFAULT_UPDATE_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.GLOBAL_SEARCH_ALIAS;
 import static org.openmetadata.service.search.SearchClient.PROPAGATE_ENTITY_REFERENCE_FIELD_SCRIPT;
@@ -23,7 +28,9 @@ import static org.openmetadata.service.search.SearchClient.PROPAGATE_NESTED_FIEL
 import static org.openmetadata.service.search.SearchClient.PROPAGATE_TEST_SUITES_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.REMOVE_DATA_PRODUCTS_CHILDREN_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.REMOVE_DOMAINS_CHILDREN_SCRIPT;
+import static org.openmetadata.service.search.SearchClient.REMOVE_DOMAINS_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.REMOVE_ENTITY_RELATIONSHIP;
+import static org.openmetadata.service.search.SearchClient.REMOVE_FOLLOWERS_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.REMOVE_OWNERS_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.REMOVE_PROPAGATED_ENTITY_REFERENCE_FIELD_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.REMOVE_PROPAGATED_FIELD_SCRIPT;
@@ -34,13 +41,28 @@ import static org.openmetadata.service.search.SearchClient.UPDATE_ADDED_DELETE_G
 import static org.openmetadata.service.search.SearchClient.UPDATE_CERTIFICATION_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.UPDATE_PROPAGATED_ENTITY_REFERENCE_FIELD_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.UPDATE_TAGS_FIELD_SCRIPT;
+import static org.openmetadata.service.search.SearchConstants.ENTITY_TYPE;
+import static org.openmetadata.service.search.SearchConstants.FAILED_TO_CREATE_INDEX_MESSAGE;
+import static org.openmetadata.service.search.SearchConstants.FULLY_QUALIFIED_NAME;
+import static org.openmetadata.service.search.SearchConstants.HITS;
+import static org.openmetadata.service.search.SearchConstants.ID;
+import static org.openmetadata.service.search.SearchConstants.PARENT;
+import static org.openmetadata.service.search.SearchConstants.SEARCH_SOURCE;
+import static org.openmetadata.service.search.SearchConstants.SERVICE_ID;
+import static org.openmetadata.service.search.SearchConstants.TAGS_FQN;
+import static org.openmetadata.service.search.SearchConstants.TEST_SUITES;
 import static org.openmetadata.service.search.SearchUtils.isConnectedVia;
-import static org.openmetadata.service.search.models.IndexMapping.indexNameSeparator;
 import static org.openmetadata.service.util.EntityUtil.compareEntityReferenceById;
+import static org.openmetadata.service.util.EntityUtil.isNullOrEmptyChangeDescription;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.ArrayNode;
+import io.micrometer.core.instrument.Metrics;
+import io.micrometer.core.instrument.Tags;
+import io.micrometer.core.instrument.Timer;
+import jakarta.json.JsonObject;
+import jakarta.ws.rs.core.Response;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.ArrayList;
@@ -57,39 +79,58 @@ import java.util.Set;
 import java.util.TreeSet;
 import java.util.UUID;
 import java.util.stream.Collectors;
-import javax.json.JsonObject;
-import javax.ws.rs.core.Response;
+import java.util.stream.Stream;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang.exception.ExceptionUtils;
+import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.apache.commons.lang3.tuple.Pair;
 import org.openmetadata.schema.EntityInterface;
 import org.openmetadata.schema.EntityTimeSeriesInterface;
 import org.openmetadata.schema.analytics.ReportData;
+import org.openmetadata.schema.api.entityRelationship.SearchEntityRelationshipRequest;
+import org.openmetadata.schema.api.entityRelationship.SearchEntityRelationshipResult;
+import org.openmetadata.schema.api.lineage.EntityCountLineageRequest;
+import org.openmetadata.schema.api.lineage.LineagePaginationInfo;
 import org.openmetadata.schema.api.lineage.SearchLineageRequest;
 import org.openmetadata.schema.api.lineage.SearchLineageResult;
+import org.openmetadata.schema.api.search.SearchSettings;
 import org.openmetadata.schema.dataInsight.DataInsightChartResult;
 import org.openmetadata.schema.entity.classification.Tag;
+import org.openmetadata.schema.entity.data.QueryCostSearchResult;
+import org.openmetadata.schema.exception.JsonParsingException;
+import org.openmetadata.schema.search.AggregationRequest;
+import org.openmetadata.schema.search.SearchRequest;
 import org.openmetadata.schema.service.configuration.elasticsearch.ElasticSearchConfiguration;
+import org.openmetadata.schema.service.configuration.elasticsearch.NaturalLanguageSearchConfiguration;
 import org.openmetadata.schema.tests.DataQualityReport;
 import org.openmetadata.schema.tests.TestSuite;
+import org.openmetadata.schema.type.AssetCertification;
 import org.openmetadata.schema.type.ChangeDescription;
 import org.openmetadata.schema.type.EntityReference;
 import org.openmetadata.schema.type.FieldChange;
 import org.openmetadata.schema.type.TagLabel;
 import org.openmetadata.schema.type.UsageDetails;
+import org.openmetadata.schema.utils.JsonUtils;
+import org.openmetadata.search.IndexMapping;
+import org.openmetadata.search.IndexMappingLoader;
 import org.openmetadata.service.Entity;
-import org.openmetadata.service.exception.UnhandledServerException;
+import org.openmetadata.service.apps.bundles.searchIndex.BulkSink;
+import org.openmetadata.service.apps.bundles.searchIndex.ElasticSearchBulkSink;
+import org.openmetadata.service.apps.bundles.searchIndex.OpenSearchBulkSink;
+import org.openmetadata.service.events.lifecycle.EntityLifecycleEventDispatcher;
+import org.openmetadata.service.events.lifecycle.handlers.SearchIndexHandler;
 import org.openmetadata.service.jdbi3.EntityRepository;
+import org.openmetadata.service.monitoring.RequestLatencyContext;
 import org.openmetadata.service.search.elasticsearch.ElasticSearchClient;
 import org.openmetadata.service.search.indexes.SearchIndex;
-import org.openmetadata.service.search.models.IndexMapping;
+import org.openmetadata.service.search.nlq.NLQService;
+import org.openmetadata.service.search.nlq.NLQServiceFactory;
 import org.openmetadata.service.search.opensearch.OpenSearchClient;
 import org.openmetadata.service.security.policyevaluator.SubjectContext;
+import org.openmetadata.service.util.EntityUtil;
 import org.openmetadata.service.util.FullyQualifiedName;
-import org.openmetadata.service.util.JsonUtils;
 import org.openmetadata.service.workflows.searchIndex.ReindexingUtil;
 
 @Slf4j
@@ -106,13 +147,15 @@ public class SearchRepository {
   private final List<String> inheritableFields =
       List.of(
           FIELD_OWNERS,
-          Entity.FIELD_DOMAIN,
+          FIELD_DOMAINS,
+          FIELD_FOLLOWERS,
           Entity.FIELD_DISABLED,
           Entity.FIELD_TEST_SUITES,
           FIELD_DISPLAY_NAME);
   private final List<String> propagateFields = List.of(Entity.FIELD_TAGS);
 
-  @Getter private final ElasticSearchConfiguration elasticSearchConfiguration;
+  @Getter private final ElasticSearchConfiguration searchConfiguration;
+  @Getter private final int maxDBConnections;
 
   @Getter private final String clusterAlias;
 
@@ -127,23 +170,41 @@ public class SearchRepository {
 
   public static final String ELASTIC_SEARCH_EXTENSION = "service.eventPublisher";
 
-  public SearchRepository(ElasticSearchConfiguration config) {
-    elasticSearchConfiguration = config;
-    searchClient = buildSearchClient(config);
+  protected NLQService nlqService;
+
+  public SearchRepository(ElasticSearchConfiguration config, int maxDBConnections) {
+    this.maxDBConnections = maxDBConnections;
+    searchConfiguration = config;
+    searchClient = buildSearchClient(searchConfiguration);
     searchIndexFactory = buildIndexFactory();
     language =
-        config != null && config.getSearchIndexMappingLanguage() != null
-            ? config.getSearchIndexMappingLanguage().value()
+        searchConfiguration != null && searchConfiguration.getSearchIndexMappingLanguage() != null
+            ? searchConfiguration.getSearchIndexMappingLanguage().value()
             : "en";
-    clusterAlias = config != null ? config.getClusterAlias() : "";
+    clusterAlias = searchConfiguration != null ? searchConfiguration.getClusterAlias() : "";
     loadIndexMappings();
+    registerSearchIndexHandler();
+  }
+
+  /**
+   * Register the SearchIndexHandler as the primary handler for search indexing operations.
+   * This handler will handle the actual search indexing when entities are created/updated/deleted.
+   */
+  private void registerSearchIndexHandler() {
+    try {
+      SearchIndexHandler searchHandler = new SearchIndexHandler(this);
+      EntityLifecycleEventDispatcher.getInstance().registerHandler(searchHandler);
+      LOG.info("Successfully registered SearchIndexHandler for entity lifecycle events");
+    } catch (Exception e) {
+      LOG.error("Failed to register SearchIndexHandler", e);
+    }
   }
 
   public SearchClient getSearchClient() {
     if (searchClient == null) {
       synchronized (SearchRepository.class) {
         if (searchClient == null) {
-          searchClient = buildSearchClient(elasticSearchConfiguration);
+          searchClient = buildSearchClient(searchConfiguration);
         }
       }
     }
@@ -151,41 +212,21 @@ public class SearchRepository {
   }
 
   private void loadIndexMappings() {
-    Set<String> entities;
-    entityIndexMap = new HashMap<>();
-    try (InputStream in = getClass().getResourceAsStream("/elasticsearch/indexMapping.json")) {
-      assert in != null;
-      JsonObject jsonPayload = JsonUtils.readJson(new String(in.readAllBytes())).asJsonObject();
-      entities = jsonPayload.keySet();
-      for (String s : entities) {
-        entityIndexMap.put(
-            s, JsonUtils.readValue(jsonPayload.get(s).toString(), IndexMapping.class));
-      }
-    } catch (Exception e) {
-      throw new UnhandledServerException("Failed to load indexMapping.json", e);
-    }
-    try (InputStream in2 =
-        getClass().getResourceAsStream("/elasticsearch/collate/indexMapping.json")) {
-      if (in2 != null) {
-        JsonObject jsonPayload = JsonUtils.readJson(new String(in2.readAllBytes())).asJsonObject();
-        entities = jsonPayload.keySet();
-        for (String s : entities) {
-          entityIndexMap.put(
-              s, JsonUtils.readValue(jsonPayload.get(s).toString(), IndexMapping.class));
-        }
-      }
-    } catch (Exception e) {
-      LOG.warn("Failed to load indexMapping.json");
-    }
+    IndexMappingLoader mappingLoader = IndexMappingLoader.getInstance();
+    entityIndexMap = mappingLoader.getIndexMapping();
   }
 
   public SearchClient buildSearchClient(ElasticSearchConfiguration config) {
     SearchClient sc;
+
+    // Initialize NLQ service first
+    initializeNLQService(config);
+
     if (config != null
         && config.getSearchType() == ElasticSearchConfiguration.SearchType.OPENSEARCH) {
-      sc = new OpenSearchClient(config);
+      sc = new OpenSearchClient(config, nlqService);
     } else {
-      sc = new ElasticSearchClient(config);
+      sc = new ElasticSearchClient(config, nlqService);
     }
     return sc;
   }
@@ -199,8 +240,37 @@ public class SearchRepository {
   }
 
   public void createIndexes() {
-    for (IndexMapping indexMapping : entityIndexMap.values()) {
-      createIndex(indexMapping);
+    RecreateIndexHandler recreateIndexHandler = this.createReindexHandler();
+    ReindexContext context = recreateIndexHandler.reCreateIndexes(entityIndexMap.keySet());
+    if (context != null) {
+      for (String entityType : context.getEntities()) {
+        try {
+          String originalIndex = context.getOriginalIndex(entityType).orElse(null);
+          String canonicalIndex = context.getCanonicalIndex(entityType).orElse(null);
+          String activeIndex = context.getOriginalIndex(entityType).orElse(null);
+          String stagedIndex = context.getStagedIndex(entityType).orElse(null);
+          String canonicalAlias = context.getCanonicalAlias(entityType).orElse(null);
+          Set<String> existingAliases = context.getExistingAliases(entityType);
+          Set<String> parentAliases =
+              new HashSet<>(listOrEmpty(context.getParentAliases(entityType)));
+
+          EntityReindexContext entityReindexContext =
+              EntityReindexContext.builder()
+                  .entityType(entityType)
+                  .originalIndex(originalIndex)
+                  .canonicalIndex(canonicalIndex)
+                  .activeIndex(activeIndex)
+                  .stagedIndex(stagedIndex)
+                  .canonicalAliases(canonicalAlias)
+                  .existingAliases(existingAliases)
+                  .parentAliases(parentAliases)
+                  .build();
+          recreateIndexHandler.finalizeReindex(entityReindexContext, true);
+
+        } catch (Exception ex) {
+          LOG.error("Failed to recreate index for entity {}", entityType, ex);
+        }
+      }
     }
   }
 
@@ -219,35 +289,46 @@ public class SearchRepository {
       return name;
     }
     return Arrays.stream(name.split(","))
-        .map(index -> clusterAlias + indexNameSeparator + index.trim())
+        .map(index -> clusterAlias + INDEX_NAME_SEPARATOR + index.trim())
         .collect(Collectors.joining(","));
   }
 
   public String getIndexNameWithoutAlias(String fullIndexName) {
     if (clusterAlias != null
         && !clusterAlias.isEmpty()
-        && fullIndexName.startsWith(clusterAlias + indexNameSeparator)) {
-      return fullIndexName.substring((clusterAlias + indexNameSeparator).length());
+        && fullIndexName.startsWith(clusterAlias + INDEX_NAME_SEPARATOR)) {
+      return fullIndexName.substring((clusterAlias + INDEX_NAME_SEPARATOR).length());
     }
     return fullIndexName;
   }
 
   public boolean indexExists(IndexMapping indexMapping) {
-    return searchClient.indexExists(indexMapping.getIndexName(clusterAlias));
+    String indexName = indexMapping.getIndexName(clusterAlias);
+    if (searchClient.indexExists(indexName)) {
+      return true;
+    }
+    return !searchClient.getIndicesByAlias(indexName).isEmpty();
   }
 
   public void createIndex(IndexMapping indexMapping) {
     try {
+      String indexName = indexMapping.getIndexName(clusterAlias);
       if (!indexExists(indexMapping)) {
+        // Clean up any lingering alias with the same name
+        Set<String> aliasTargets = searchClient.getIndicesByAlias(indexName);
+        for (String target : aliasTargets) {
+          searchClient.removeAliases(target, Set.of(indexName));
+          searchClient.deleteIndex(target);
+        }
+
         String indexMappingContent = getIndexMapping(indexMapping);
         searchClient.createIndex(indexMapping, indexMappingContent);
         searchClient.createAliases(indexMapping);
       }
     } catch (Exception e) {
       LOG.error(
-          String.format(
-              "Failed to Create Index for entity %s due to ",
-              indexMapping.getIndexName(clusterAlias)),
+          String.format(FAILED_TO_CREATE_INDEX_MESSAGE),
+          indexMapping.getIndexName(clusterAlias),
           e);
     }
   }
@@ -268,8 +349,15 @@ public class SearchRepository {
 
   public void deleteIndex(IndexMapping indexMapping) {
     try {
-      if (indexExists(indexMapping)) {
+      String indexName = indexMapping.getIndexName(clusterAlias);
+      if (searchClient.indexExists(indexName)) {
         searchClient.deleteIndex(indexMapping);
+      } else {
+        Set<String> aliasTargets = searchClient.getIndicesByAlias(indexName);
+        for (String target : aliasTargets) {
+          searchClient.removeAliases(target, Set.of(indexName));
+          searchClient.deleteIndex(target);
+        }
       }
     } catch (Exception e) {
       LOG.error(
@@ -293,31 +381,52 @@ public class SearchRepository {
     return null;
   }
 
-  public void createEntity(EntityInterface entity) {
-    if (entity != null) {
-      String entityId = entity.getId().toString();
-      String entityType = entity.getEntityReference().getType();
-      try {
-        IndexMapping indexMapping = entityIndexMap.get(entityType);
-        SearchIndex index = searchIndexFactory.buildIndex(entityType, entity);
-        String doc = JsonUtils.pojoToJson(index.buildSearchIndexDoc());
-        searchClient.createEntity(indexMapping.getIndexName(clusterAlias), entityId, doc);
-      } catch (Exception ie) {
-        LOG.error(
-            "Issue in Creating new search document for entity [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
-            entityId,
-            entityType,
-            ie.getMessage(),
-            ie.getCause(),
-            ExceptionUtils.getStackTrace(ie));
-      }
+  public String readIndexMapping(IndexMapping indexMapping) {
+    return getIndexMapping(indexMapping);
+  }
+
+  /**
+   * Create search index for an entity only (no lifecycle events).
+   * This method is used by SearchIndexHandler.
+   */
+  public void createEntityIndex(EntityInterface entity) {
+    if (entity == null) {
+      LOG.warn("Entity is null, cannot create index.");
+      return;
+    }
+
+    if (!checkIfIndexingIsSupported(entity.getEntityReference().getType())) {
+      LOG.debug(
+          "Indexing is not supported for entity type: {}", entity.getEntityReference().getType());
+      return;
+    }
+
+    String entityId = entity.getId().toString();
+    String entityType = entity.getEntityReference().getType();
+    try {
+      IndexMapping indexMapping = entityIndexMap.get(entityType);
+      SearchIndex index = searchIndexFactory.buildIndex(entityType, entity);
+      String doc = JsonUtils.pojoToJson(index.buildSearchIndexDoc());
+      searchClient.createEntity(indexMapping.getIndexName(clusterAlias), entityId, doc);
+    } catch (Exception ie) {
+      LOG.error(
+          "Issue in Creating new search document for entity [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
+          entityId,
+          entityType,
+          ie.getMessage(),
+          ie.getCause(),
+          ExceptionUtils.getStackTrace(ie));
     }
   }
 
-  public void createEntities(List<EntityInterface> entities) {
+  /**
+   * Create search indexes for multiple entities only (no lifecycle events).
+   * This method is used by SearchIndexHandler.
+   */
+  public void createEntitiesIndex(List<EntityInterface> entities) {
     if (!nullOrEmpty(entities)) {
       // All entities in the list are of the same type
-      String entityType = entities.get(0).getEntityReference().getType();
+      String entityType = entities.getFirst().getEntityReference().getType();
       IndexMapping indexMapping = entityIndexMap.get(entityType);
       List<Map<String, String>> docs = new ArrayList<>();
       for (EntityInterface entity : entities) {
@@ -337,6 +446,16 @@ public class SearchRepository {
             ExceptionUtils.getStackTrace(ie));
       }
     }
+  }
+
+  /**
+   * Create search indexes for multiple entities and dispatch lifecycle events.
+   * This method maintains backward compatibility.
+   */
+  public void createEntities(List<EntityInterface> entities) {
+    // For backward compatibility, just call the index-only method
+    // EntityRepository now handles lifecycle event dispatching
+    createEntitiesIndex(entities);
   }
 
   public void createTimeSeriesEntity(EntityTimeSeriesInterface entity) {
@@ -389,51 +508,110 @@ public class SearchRepository {
     }
   }
 
-  public void updateEntity(EntityInterface entity) {
-    if (entity != null) {
-      String entityType = entity.getEntityReference().getType();
-      String entityId = entity.getId().toString();
-      try {
-        IndexMapping indexMapping = entityIndexMap.get(entityType);
-        String scriptTxt = DEFAULT_UPDATE_SCRIPT;
-        Map<String, Object> doc = new HashMap<>();
+  /**
+   * Update search index for an entity only (no lifecycle events).
+   * This method is used by SearchIndexHandler.
+   */
+  public void updateEntityIndex(EntityInterface entity) {
+    if (entity == null) {
+      LOG.warn("Entity is null, cannot update index.");
+      return;
+    }
 
-        ChangeDescription incrementalChangeDescription = entity.getIncrementalChangeDescription();
-        ChangeDescription changeDescription;
+    if (!checkIfIndexingIsSupported(entity.getEntityReference().getType())) {
+      LOG.debug(
+          "Indexing is not supported for entity type: {}", entity.getEntityReference().getType());
+      return;
+    }
 
-        if (incrementalChangeDescription != null
-            && (!incrementalChangeDescription.getFieldsAdded().isEmpty()
-                || !incrementalChangeDescription.getFieldsUpdated().isEmpty()
-                || !incrementalChangeDescription.getFieldsDeleted().isEmpty())) {
-          changeDescription = incrementalChangeDescription;
-        } else {
-          changeDescription = entity.getChangeDescription();
-        }
+    String entityType = entity.getEntityReference().getType();
+    String entityId = entity.getId().toString();
 
-        if (changeDescription != null
-            && entity.getChangeDescription() != null
-            && Objects.equals(
-                entity.getVersion(), entity.getChangeDescription().getPreviousVersion())) {
-          scriptTxt = getScriptWithParams(entity, doc, changeDescription);
-        } else {
-          SearchIndex elasticSearchIndex = searchIndexFactory.buildIndex(entityType, entity);
-          doc = elasticSearchIndex.buildSearchIndexDoc();
-        }
-        searchClient.updateEntity(
-            indexMapping.getIndexName(clusterAlias), entityId, doc, scriptTxt);
+    // Start timing search operation
+    Timer.Sample searchSample = RequestLatencyContext.startSearchOperation();
+    long startTime = System.currentTimeMillis();
+
+    try {
+      IndexMapping indexMapping = entityIndexMap.get(entityType);
+      String scriptTxt = DEFAULT_UPDATE_SCRIPT;
+      Map<String, Object> doc = new HashMap<>();
+
+      ChangeDescription incrementalChangeDescription = entity.getIncrementalChangeDescription();
+      ChangeDescription changeDescription;
+
+      if (!isNullOrEmptyChangeDescription(incrementalChangeDescription)) {
+        changeDescription = incrementalChangeDescription;
+      } else {
+        changeDescription = entity.getChangeDescription();
+      }
+
+      if (changeDescription != null
+          && entity.getChangeDescription() != null
+          && Objects.equals(
+              entity.getVersion(), entity.getChangeDescription().getPreviousVersion())) {
+        scriptTxt = getScriptWithParams(entity, doc, changeDescription);
+      } else {
+        SearchIndex elasticSearchIndex = searchIndexFactory.buildIndex(entityType, entity);
+        doc = elasticSearchIndex.buildSearchIndexDoc();
+      }
+
+      // Use synchronous update to ensure tests pass
+      // TODO: Consider using async updates with proper wait mechanisms in tests
+      searchClient.updateEntity(indexMapping.getIndexName(clusterAlias), entityId, doc, scriptTxt);
+
+      long updateTime = System.currentTimeMillis() - startTime;
+
+      // Only propagate if fields that affect children have changed
+      long propagateTime = 0;
+      if (requiresPropagation(changeDescription, entityType, entity)) {
+        // Time propagation operations
+        startTime = System.currentTimeMillis();
         propagateInheritedFieldsToChildren(
             entityType, entityId, changeDescription, indexMapping, entity);
         propagateGlossaryTags(entityType, entity.getFullyQualifiedName(), changeDescription);
         propagateCertificationTags(entityType, entity, changeDescription);
-        propagatetoRelatedEntities(entityType, entityId, changeDescription, indexMapping, entity);
-      } catch (Exception ie) {
-        LOG.error(
-            "Issue in Updating the search document for entity [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
+        propagateToRelatedEntities(entityType, changeDescription, indexMapping, entity);
+        propagateTime = System.currentTimeMillis() - startTime;
+
+        LOG.info(
+            "Search index update with propagation - entity: {}, type: {}, update: {}ms, propagate: {}ms, total: {}ms",
             entityId,
             entityType,
-            ie.getMessage(),
-            ie.getCause(),
-            ExceptionUtils.getStackTrace(ie));
+            updateTime,
+            propagateTime,
+            updateTime + propagateTime);
+      } else {
+        LOG.info(
+            "Search index update without propagation - entity: {}, type: {}, update: {}ms",
+            entityId,
+            entityType,
+            updateTime);
+      }
+
+      // Record search index metrics
+      Tags tags = Tags.of("entity_type", entityType, "operation", "update");
+      Metrics.timer("search.index.update", tags)
+          .record(updateTime, java.util.concurrent.TimeUnit.MILLISECONDS);
+
+      if (propagateTime > 0) {
+        Metrics.timer("search.index.propagate", tags)
+            .record(propagateTime, java.util.concurrent.TimeUnit.MILLISECONDS);
+        Metrics.counter("search.index.propagation.executed", tags).increment();
+      } else {
+        Metrics.counter("search.index.propagation.skipped", tags).increment();
+      }
+    } catch (Exception ie) {
+      LOG.error(
+          "Issue in Updating the search document for entity [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
+          entityId,
+          entityType,
+          ie.getMessage(),
+          ie.getCause(),
+          ExceptionUtils.getStackTrace(ie));
+    } finally {
+      // End search timing
+      if (searchSample != null) {
+        RequestLatencyContext.endSearchOperation(searchSample);
       }
     }
   }
@@ -443,7 +621,108 @@ public class SearchRepository {
     EntityInterface entity =
         entityRepository.get(null, entityReference.getId(), entityRepository.getFields("*"));
     // Update Entity
-    updateEntity(entity);
+    updateEntityIndex(entity);
+  }
+
+  public boolean checkIfIndexingIsSupported(String entityType) {
+    IndexMapping indexMapping = entityIndexMap.get(entityType);
+    if (indexMapping == null) {
+      LOG.debug("Index mapping is not supported for entity type: {}", entityType);
+      return false;
+    }
+    return true;
+  }
+
+  /**
+   * Determines if changes require propagation to child entities.
+   * Only propagate when fields that actually affect children have been modified.
+   */
+  private boolean requiresPropagation(
+      ChangeDescription changeDescription, String entityType, EntityInterface entity) {
+    if (changeDescription == null) {
+      return false;
+    }
+
+    // Check if any inheritable fields have changed (owners, domains, etc.)
+    boolean hasInheritableChanges =
+        changeDescription.getFieldsAdded().stream()
+                .anyMatch(field -> inheritableFields.contains(field.getName()))
+            || changeDescription.getFieldsUpdated().stream()
+                .anyMatch(field -> inheritableFields.contains(field.getName()))
+            || changeDescription.getFieldsDeleted().stream()
+                .anyMatch(field -> inheritableFields.contains(field.getName()));
+
+    // Tags need special handling - they only propagate in specific scenarios:
+    // 1. From glossary terms to entities
+    // 2. When a tag entity itself is updated (to all entities using it)
+    // 3. NOT from table to columns
+    boolean hasTagChanges = false;
+    boolean nameChanged =
+        changeDescription.getFieldsUpdated().stream()
+            .anyMatch(field -> field.getName().equals(FIELD_NAME));
+    if (entityType.equalsIgnoreCase(Entity.GLOSSARY_TERM)
+        || entityType.equalsIgnoreCase(Entity.TAG)) {
+      hasTagChanges =
+          changeDescription.getFieldsAdded().stream()
+                  .anyMatch(field -> propagateFields.contains(field.getName()))
+              || changeDescription.getFieldsUpdated().stream()
+                  .anyMatch(field -> propagateFields.contains(field.getName()))
+              || changeDescription.getFieldsDeleted().stream()
+                  .anyMatch(field -> propagateFields.contains(field.getName()));
+    }
+
+    // Check for glossary term specific changes
+    if (entityType.equalsIgnoreCase(Entity.GLOSSARY_TERM)) {
+      hasInheritableChanges =
+          hasInheritableChanges
+              || hasTagChanges
+              || nameChanged
+              || changeDescription.getFieldsAdded().stream()
+                  .anyMatch(field -> field.getName().equals(Entity.FIELD_TAGS))
+              || changeDescription.getFieldsDeleted().stream()
+                  .anyMatch(field -> field.getName().equals(Entity.FIELD_TAGS));
+    }
+
+    // Check for certification tag changes + tag specific changes
+    if (entityType.equalsIgnoreCase(Entity.TAG)) {
+      Tag tag = (Tag) entity;
+      hasInheritableChanges = hasInheritableChanges || nameChanged;
+      if (tag != null && tag.getCertification() != null) {
+        hasInheritableChanges =
+            hasInheritableChanges
+                || changeDescription.getFieldsUpdated().stream()
+                    .anyMatch(field -> field.getName().equals("certification"));
+      }
+    }
+
+    // Check for relationship changes that need propagation
+    if (changeDescription.getFieldsAdded().stream()
+            .anyMatch(field -> field.getName().equals("upstreamEntityRelationship"))
+        || changeDescription.getFieldsUpdated().stream()
+            .anyMatch(field -> field.getName().equals("upstreamEntityRelationship"))) {
+      hasInheritableChanges = true;
+    }
+
+    // Page entities have special FQN propagation when parent changes
+    if (entityType.equalsIgnoreCase(Entity.PAGE)) {
+      boolean parentChanged =
+          changeDescription.getFieldsAdded().stream()
+                  .anyMatch(field -> field.getName().contains("parent"))
+              || changeDescription.getFieldsUpdated().stream()
+                  .anyMatch(field -> field.getName().contains("parent"));
+      hasInheritableChanges = hasInheritableChanges || parentChanged;
+    }
+
+    boolean propagationRequired = hasInheritableChanges || hasTagChanges;
+
+    if (propagationRequired) {
+      LOG.debug(
+          "Propagation required for entity {} of type {} - changes detected in inheritable fields or special propagation needed",
+          entity.getId(),
+          entityType);
+    }
+
+    return propagationRequired;
   }
 
   public void propagateInheritedFieldsToChildren(
@@ -451,13 +730,17 @@ public class SearchRepository {
       String entityId,
       ChangeDescription changeDescription,
       IndexMapping indexMapping,
-      EntityInterface entity) {
+      EntityInterface entity)
+      throws IOException {
     if (changeDescription != null) {
       Pair<String, Map<String, Object>> updates =
           getInheritedFieldChanges(changeDescription, entity);
       Pair<String, String> parentMatch;
       if (!updates.getValue().isEmpty()
-          && (updates.getValue().containsKey(FIELD_DOMAIN)
+          // domains can be updatedDomains or deletedDomains and need to be propagated from the
+          // service level
+          && (updates.getValue().keySet().stream()
+                  .anyMatch(key -> key.toLowerCase().contains(FIELD_DOMAINS))
               || updates.getValue().containsKey(FIELD_DISPLAY_NAME))) {
         if (entityType.equalsIgnoreCase(Entity.DATABASE_SERVICE)
             || entityType.equalsIgnoreCase(Entity.DASHBOARD_SERVICE)
@@ -466,8 +749,10 @@ public class SearchRepository {
             || entityType.equalsIgnoreCase(Entity.MLMODEL_SERVICE)
             || entityType.equalsIgnoreCase(Entity.STORAGE_SERVICE)
             || entityType.equalsIgnoreCase(Entity.SEARCH_SERVICE)
-            || entityType.equalsIgnoreCase(Entity.API_SERVICE)) {
-          parentMatch = new ImmutablePair<>("service.id", entityId);
+            || entityType.equalsIgnoreCase(Entity.SECURITY_SERVICE)
+            || entityType.equalsIgnoreCase(Entity.API_SERVICE)
+            || entityType.equalsIgnoreCase(Entity.DRIVE_SERVICE)) {
+          parentMatch = new ImmutablePair<>(SERVICE_ID, entityId);
         } else {
           parentMatch = new ImmutablePair<>(entityType + ".id", entityId);
         }
@@ -503,32 +788,90 @@ public class SearchRepository {
       }
       searchClient.updateChildren(
           GLOBAL_SEARCH_ALIAS,
-          new ImmutablePair<>("tags.tagFQN", glossaryFQN),
+          new ImmutablePair<>(TAGS_FQN, glossaryFQN),
           new ImmutablePair<>(UPDATE_ADDED_DELETE_GLOSSARY_TAGS, fieldData));
     }
   }
 
+  private static final String CERTIFICATION = "Certification";
+  private static final String CERTIFICATION_FIELD = "certification";
+  private static final String CERTIFICATION_TAG_FQN_FIELD = "certification.tagLabel.tagFQN";
+
   public void propagateCertificationTags(
       String entityType, EntityInterface entity, ChangeDescription changeDescription) {
-    if (changeDescription != null && entityType.equalsIgnoreCase(Entity.TAG)) {
-      Tag tagEntity = (Tag) entity;
-      if (tagEntity.getClassification().getFullyQualifiedName().equals("Certification")) {
-        Map<String, Object> paramMap = new HashMap<>();
-        paramMap.put("name", entity.getName());
-        paramMap.put("description", entity.getDescription());
-        paramMap.put("tagFQN", entity.getFullyQualifiedName());
-        paramMap.put("style", entity.getStyle());
-        searchClient.updateChildren(
-            GLOBAL_SEARCH_ALIAS,
-            new ImmutablePair<>("certification.tagLabel.tagFQN", entity.getFullyQualifiedName()),
-            new ImmutablePair<>(UPDATE_CERTIFICATION_SCRIPT, paramMap));
-      }
+    if (changeDescription == null) {
+      return;
+    }
+
+    if (Entity.TAG.equalsIgnoreCase(entityType)) {
+      handleTagEntityUpdate((Tag) entity);
+    } else {
+      handleEntityCertificationUpdate(entity, changeDescription);
     }
   }
 
-  public void propagatetoRelatedEntities(
+  private void handleTagEntityUpdate(Tag tagEntity) {
+    if (CERTIFICATION.equals(tagEntity.getClassification().getFullyQualifiedName())) {
+      updateCertificationInSearch(tagEntity);
+    }
+  }
+
+  private void updateCertificationInSearch(Tag tagEntity) {
+    Map<String, Object> paramMap = new HashMap<>();
+    paramMap.put("name", tagEntity.getName());
+    paramMap.put("description", tagEntity.getDescription());
+    paramMap.put("tagFQN", tagEntity.getFullyQualifiedName());
+    paramMap.put("style", tagEntity.getStyle());
+    searchClient.updateChildren(
+        DATA_ASSET_SEARCH_ALIAS,
+        new ImmutablePair<>(CERTIFICATION_TAG_FQN_FIELD, tagEntity.getFullyQualifiedName()),
+        new ImmutablePair<>(UPDATE_CERTIFICATION_SCRIPT, paramMap));
+  }
+
+  private void handleEntityCertificationUpdate(EntityInterface entity, ChangeDescription change) {
+    if (!isCertificationUpdated(change)) {
+      return;
+    }
+
+    AssetCertification certification = getCertificationFromEntity(entity);
+    updateEntityCertificationInSearch(entity, certification);
+  }
+
+  private boolean isCertificationUpdated(ChangeDescription change) {
+    return Stream.concat(
+            Stream.concat(change.getFieldsUpdated().stream(), change.getFieldsAdded().stream()),
+            change.getFieldsDeleted().stream())
+        .anyMatch(fieldChange -> CERTIFICATION_FIELD.equals(fieldChange.getName()));
+  }
+
+  private AssetCertification getCertificationFromEntity(EntityInterface entity) {
+    return (AssetCertification) EntityUtil.getEntityField(entity, CERTIFICATION_FIELD);
+  }
+
+  private void updateEntityCertificationInSearch(
+      EntityInterface entity, AssetCertification certification) {
+    IndexMapping indexMapping = entityIndexMap.get(entity.getEntityReference().getType());
+    String indexName = indexMapping.getIndexName(clusterAlias);
+    Map<String, Object> paramMap = new HashMap<>();
+
+    if (certification != null && certification.getTagLabel() != null) {
+      paramMap.put("name", certification.getTagLabel().getName());
+      paramMap.put("description", certification.getTagLabel().getDescription());
+      paramMap.put("tagFQN", certification.getTagLabel().getTagFQN());
+      paramMap.put("style", certification.getTagLabel().getStyle());
+    } else {
+      paramMap.put("name", null);
+      paramMap.put("description", null);
+      paramMap.put("tagFQN", null);
+      paramMap.put("style", null);
+    }
+
+    searchClient.updateEntity(
+        indexName, entity.getId().toString(), paramMap, UPDATE_CERTIFICATION_SCRIPT);
+  }
+
+  public void propagateToRelatedEntities(
       String entityType,
-      String entityId,
       ChangeDescription changeDescription,
       IndexMapping indexMapping,
       EntityInterface entity) {
@@ -536,7 +879,7 @@ public class SearchRepository {
     if (changeDescription != null && entityType.equalsIgnoreCase(Entity.PAGE)) {
       String indexName = indexMapping.getIndexName();
       for (FieldChange field : changeDescription.getFieldsAdded()) {
-        if (field.getName().contains("parent")) {
+        if (field.getName().contains(PARENT)) {
           String oldParentFQN = entity.getName();
           String newParentFQN = entity.getFullyQualifiedName();
           // Propagate FQN updates to all subchildren
@@ -546,7 +889,7 @@ public class SearchRepository {
       }
 
       for (FieldChange field : changeDescription.getFieldsUpdated()) {
-        if (field.getName().contains("parent")) {
+        if (field.getName().contains(PARENT)) {
           EntityReference entityReferenceBeforeUpdate =
               JsonUtils.readValue(field.getOldValue().toString(), EntityReference.class);
           // Propagate FQN updates to all subchildren
@@ -560,14 +903,22 @@ public class SearchRepository {
       }
 
       for (FieldChange field : changeDescription.getFieldsDeleted()) {
-        if (field.getName().contains("parent")) {
+        if (field.getName().contains(PARENT)) {
           EntityReference entityReferenceBeforeUpdate =
               JsonUtils.readValue(field.getOldValue().toString(), EntityReference.class);
+          // Remove the parent field from the entity in search
+          String parentFieldPath = "parent";
+          Map<String, Object> params = new HashMap<>();
+          params.put("field", parentFieldPath);
+          searchClient.updateEntity(
+              indexName, entity.getId().toString(), params, "ctx._source.remove(params.field)");
+
           // Propagate FQN updates to all subchildren
           String originalFqn =
               FullyQualifiedName.add(
                   entityReferenceBeforeUpdate.getFullyQualifiedName(), entity.getName());
-          searchClient.updateByFqnPrefix(indexName, originalFqn, "", FIELD_FULLY_QUALIFIED_NAME);
+          searchClient.updateByFqnPrefix(
+              indexName, originalFqn, entity.getName(), FIELD_FULLY_QUALIFIED_NAME);
         }
       }
     } else if (changeDescription != null
@@ -592,17 +943,17 @@ public class SearchRepository {
         }
 
         if (field.getName().contains(FIELD_NAME)) {
-          searchClient.updateByFqnPrefix(GLOBAL_SEARCH_ALIAS, oldFQN, newFQN, "tags.tagFQN");
+          searchClient.updateByFqnPrefix(GLOBAL_SEARCH_ALIAS, oldFQN, newFQN, TAGS_FQN);
         }
 
-        if (field.getName().equalsIgnoreCase(Entity.FIELD_DISPLAY_NAME)) {
+        if (field.getName().equalsIgnoreCase(FIELD_DISPLAY_NAME)) {
           Map<String, Object> updates = new HashMap<>();
           updates.put("displayName", field.getNewValue().toString());
           paramMap.put("tagFQN", oldFQN);
           paramMap.put("updates", updates);
           searchClient.updateChildren(
               GLOBAL_SEARCH_ALIAS,
-              new ImmutablePair<>("tags.tagFQN", oldFQN),
+              new ImmutablePair<>(TAGS_FQN, oldFQN),
               new ImmutablePair<>(UPDATE_TAGS_FIELD_SCRIPT, paramMap));
         }
       }
@@ -627,6 +978,21 @@ public class SearchRepository {
               fieldData.put("deletedOwners", inheritedOwners);
               scriptTxt.append(REMOVE_OWNERS_SCRIPT);
               scriptTxt.append(" ");
+            } else if (field.getName().equals(FIELD_DOMAINS)) {
+              List<EntityReference> inheritedDomains =
+                  JsonUtils.deepCopyList(entity.getDomains(), EntityReference.class);
+              for (EntityReference inheritedDomain : inheritedDomains) {
+                inheritedDomain.setInherited(true);
+              }
+              fieldData.put("deletedDomains", inheritedDomains);
+              scriptTxt.append(REMOVE_DOMAINS_SCRIPT);
+              scriptTxt.append(" ");
+            } else if (field.getName().equals(FIELD_FOLLOWERS)) {
+              List<EntityReference> inheritedFollowers =
+                  copyWithInheritedFlag(entity.getFollowers());
+              fieldData.put("deletedFollowers", inheritedFollowers);
+              scriptTxt.append(REMOVE_FOLLOWERS_SCRIPT);
+              scriptTxt.append(" ");
             } else {
               EntityReference entityReference =
                   JsonUtils.readValue(field.getOldValue().toString(), EntityReference.class);
@@ -639,7 +1005,7 @@ public class SearchRepository {
               fieldData.put(field.getName(), JsonUtils.getMap(entityReference));
               scriptTxt.append(" ");
             }
-          } catch (UnhandledServerException e) {
+          } catch (JsonParsingException e) {
             scriptTxt.append(String.format(REMOVE_PROPAGATED_FIELD_SCRIPT, field.getName()));
           }
         }
@@ -661,11 +1027,11 @@ public class SearchRepository {
                     field.getName(),
                     field.getName()));
             fieldData.put(field.getName(), newEntityReference);
-          } catch (UnhandledServerException e) {
+          } catch (JsonParsingException e) {
             if (field.getName().equals(Entity.FIELD_TEST_SUITES)) {
               scriptTxt.append(PROPAGATE_TEST_SUITES_SCRIPT);
               fieldData.put(Entity.FIELD_TEST_SUITES, field.getNewValue());
-            } else if (field.getName().equals(Entity.FIELD_DISPLAY_NAME)) {
+            } else if (field.getName().equals(FIELD_DISPLAY_NAME)) {
               String fieldPath =
                   getFieldPath(entity.getEntityReference().getType(), field.getName());
               fieldData.put(field.getName(), field.getNewValue().toString());
@@ -690,6 +1056,19 @@ public class SearchRepository {
               }
               fieldData.put("updatedOwners", inheritedOwners);
               scriptTxt.append(ADD_OWNERS_SCRIPT);
+            } else if (field.getName().equals(FIELD_DOMAINS)) {
+              List<EntityReference> inheritedDomains =
+                  JsonUtils.deepCopyList(entity.getDomains(), EntityReference.class);
+              for (EntityReference inheritedDomain : inheritedDomains) {
+                inheritedDomain.setInherited(true);
+              }
+              fieldData.put("updatedDomains", inheritedDomains);
+              scriptTxt.append(ADD_DOMAINS_SCRIPT);
+            } else if (field.getName().equals(FIELD_FOLLOWERS)) {
+              List<EntityReference> inheritedFollowers =
+                  copyWithInheritedFlag(entity.getFollowers());
+              fieldData.put("updatedFollowers", inheritedFollowers);
+              scriptTxt.append(ADD_FOLLOWERS_SCRIPT);
             } else {
               EntityReference entityReference =
                   JsonUtils.readValue(field.getNewValue().toString(), EntityReference.class);
@@ -704,8 +1083,8 @@ public class SearchRepository {
               fieldData.put(field.getName(), entityReference);
             }
             scriptTxt.append(" ");
-          } catch (UnhandledServerException e) {
-            if (field.getName().equals(Entity.FIELD_DISPLAY_NAME)) {
+          } catch (JsonParsingException e) {
+            if (field.getName().equals(FIELD_DISPLAY_NAME)) {
               String fieldPath =
                   getFieldPath(entity.getEntityReference().getType(), field.getName());
               fieldData.put(field.getName(), field.getNewValue().toString());
@@ -731,7 +1110,9 @@ public class SearchRepository {
         || entityType.equalsIgnoreCase(Entity.MLMODEL_SERVICE)
         || entityType.equalsIgnoreCase(Entity.STORAGE_SERVICE)
         || entityType.equalsIgnoreCase(Entity.SEARCH_SERVICE)
-        || entityType.equalsIgnoreCase(Entity.API_SERVICE)) {
+        || entityType.equalsIgnoreCase(Entity.SECURITY_SERVICE)
+        || entityType.equalsIgnoreCase(Entity.API_SERVICE)
+        || entityType.equalsIgnoreCase(Entity.DRIVE_SERVICE)) {
       return "service." + fieldName;
     } else {
       return entityType + "." + fieldName;
@@ -752,23 +1133,36 @@ public class SearchRepository {
     }
   }
 
-  public void deleteEntity(EntityInterface entity) {
-    if (entity != null) {
-      String entityId = entity.getId().toString();
-      String entityType = entity.getEntityReference().getType();
-      IndexMapping indexMapping = entityIndexMap.get(entityType);
-      try {
-        searchClient.deleteEntity(indexMapping.getIndexName(clusterAlias), entityId);
-        deleteOrUpdateChildren(entity, indexMapping);
-      } catch (Exception ie) {
-        LOG.error(
-            "Issue in Deleting the search document for entityID [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
-            entityId,
-            entityType,
-            ie.getMessage(),
-            ie.getCause(),
-            ExceptionUtils.getStackTrace(ie));
-      }
+  /**
+   * Delete search index for an entity only (no lifecycle events).
+   * This method is used by SearchIndexHandler.
+   */
+  public void deleteEntityIndex(EntityInterface entity) {
+    if (entity == null) {
+      LOG.debug("Entity or EntityReference is null, cannot perform delete.");
+      return;
+    }
+
+    if (!checkIfIndexingIsSupported(entity.getEntityReference().getType())) {
+      LOG.debug(
+          "Indexing is not supported for entity type: {}", entity.getEntityReference().getType());
+      return;
+    }
+
+    String entityId = entity.getId().toString();
+    String entityType = entity.getEntityReference().getType();
+    IndexMapping indexMapping = entityIndexMap.get(entityType);
+    try {
+      searchClient.deleteEntity(indexMapping.getIndexName(clusterAlias), entityId);
+      deleteOrUpdateChildren(entity, indexMapping);
+    } catch (Exception ie) {
+      LOG.error(
+          "Issue in Deleting the search document for entityID [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
+          entityId,
+          entityType,
+          ie.getMessage(),
+          ie.getCause(),
+          ExceptionUtils.getStackTrace(ie));
     }
   }
 
@@ -810,29 +1204,43 @@ public class SearchRepository {
     }
   }
 
-  public void softDeleteOrRestoreEntity(EntityInterface entity, boolean delete) {
-    if (entity != null) {
-      String entityId = entity.getId().toString();
-      String entityType = entity.getEntityReference().getType();
-      IndexMapping indexMapping = entityIndexMap.get(entityType);
-      String scriptTxt = String.format(SOFT_DELETE_RESTORE_SCRIPT, delete);
-      try {
-        searchClient.softDeleteOrRestoreEntity(
-            indexMapping.getIndexName(clusterAlias), entityId, scriptTxt);
-        softDeleteOrRestoredChildren(entity.getEntityReference(), indexMapping, delete);
-      } catch (Exception ie) {
-        LOG.error(
-            "Issue in Soft Deleting the search document for entityID [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
-            entityId,
-            entityType,
-            ie.getMessage(),
-            ie.getCause(),
-            ExceptionUtils.getStackTrace(ie));
-      }
+  /**
+   * Soft delete or restore search index for an entity only (no lifecycle events).
+   * This method is used by SearchIndexHandler.
+   */
+  public void softDeleteOrRestoreEntityIndex(EntityInterface entity, boolean delete) {
+    if (entity == null) {
+      LOG.debug("Entity or EntityReference is null, cannot perform soft delete or restore.");
+      return;
+    }
+
+    if (!checkIfIndexingIsSupported(entity.getEntityReference().getType())) {
+      LOG.debug(
+          "Indexing is not supported for entity type: {}", entity.getEntityReference().getType());
+      return;
+    }
+
+    String entityId = entity.getId().toString();
+    String entityType = entity.getEntityReference().getType();
+    IndexMapping indexMapping = entityIndexMap.get(entityType);
+    String scriptTxt = String.format(SOFT_DELETE_RESTORE_SCRIPT, delete);
+    try {
+      searchClient.softDeleteOrRestoreEntity(
+          indexMapping.getIndexName(clusterAlias), entityId, scriptTxt);
+      softDeleteOrRestoredChildren(entity.getEntityReference(), indexMapping, delete);
+    } catch (Exception ie) {
+      LOG.error(
+          "Issue in Soft Deleting the search document for entityID [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
+          entityId,
+          entityType,
+          ie.getMessage(),
+          ie.getCause(),
+          ExceptionUtils.getStackTrace(ie));
     }
   }
 
-  public void deleteOrUpdateChildren(EntityInterface entity, IndexMapping indexMapping) {
+  public void deleteOrUpdateChildren(EntityInterface entity, IndexMapping indexMapping)
+      throws IOException {
     String docId = entity.getId().toString();
     String entityType = entity.getEntityReference().getType();
     switch (entityType) {
@@ -860,16 +1268,6 @@ public class SearchRepository {
           new ImmutablePair<>(
               REMOVE_TAGS_CHILDREN_SCRIPT,
               Collections.singletonMap("fqn", entity.getFullyQualifiedName())));
-      case Entity.DASHBOARD -> {
-        String scriptTxt =
-            String.format(
-                "if (ctx._source.dashboards.size() == 1) { ctx._source.put('deleted', '%s') }",
-                true);
-        searchClient.softDeleteOrRestoreChildren(
-            indexMapping.getChildAliases(clusterAlias),
-            scriptTxt,
-            List.of(new ImmutablePair<>("dashboards.id", docId)));
-      }
       case Entity.TEST_SUITE -> {
         TestSuite testSuite = (TestSuite) entity;
         if (Boolean.TRUE.equals(testSuite.getBasic())) {
@@ -880,7 +1278,9 @@ public class SearchRepository {
           searchClient.updateChildren(
               indexMapping.getChildAliases(clusterAlias),
               new ImmutablePair<>("testSuites.id", testSuite.getId().toString()),
-              new ImmutablePair<>(REMOVE_TEST_SUITE_CHILDREN_SCRIPT, null));
+              new ImmutablePair<>(
+                  REMOVE_TEST_SUITE_CHILDREN_SCRIPT,
+                  Collections.singletonMap("suiteId", testSuite.getId().toString())));
         }
       }
       case Entity.DASHBOARD_SERVICE,
@@ -889,7 +1289,9 @@ public class SearchRepository {
           Entity.PIPELINE_SERVICE,
           Entity.MLMODEL_SERVICE,
           Entity.STORAGE_SERVICE,
-          Entity.SEARCH_SERVICE -> searchClient.deleteEntityByFields(
+          Entity.SEARCH_SERVICE,
+          Entity.SECURITY_SERVICE,
+          Entity.DRIVE_SERVICE -> searchClient.deleteEntityByFields(
           indexMapping.getChildAliases(clusterAlias),
           List.of(new ImmutablePair<>("service.id", docId)));
       default -> {
@@ -903,7 +1305,8 @@ public class SearchRepository {
   }
 
   public void softDeleteOrRestoredChildren(
-      EntityReference entityReference, IndexMapping indexMapping, boolean delete) {
+      EntityReference entityReference, IndexMapping indexMapping, boolean delete)
+      throws IOException {
     String docId = entityReference.getId().toString();
     String entityType = entityReference.getType();
     String scriptTxt = String.format(SOFT_DELETE_RESTORE_SCRIPT, delete);
@@ -914,24 +1317,21 @@ public class SearchRepository {
           Entity.PIPELINE_SERVICE,
           Entity.MLMODEL_SERVICE,
           Entity.STORAGE_SERVICE,
-          Entity.SEARCH_SERVICE -> searchClient.softDeleteOrRestoreChildren(
+          Entity.SEARCH_SERVICE,
+          Entity.SECURITY_SERVICE,
+          Entity.DRIVE_SERVICE -> searchClient.softDeleteOrRestoreChildren(
           indexMapping.getChildAliases(clusterAlias),
           scriptTxt,
           List.of(new ImmutablePair<>("service.id", docId)));
-      case Entity.DASHBOARD -> {
-        scriptTxt =
-            String.format(
-                "if (ctx._source.dashboards.size() == 1) { ctx._source.put('deleted', '%s') }",
-                delete);
-        searchClient.softDeleteOrRestoreChildren(
-            indexMapping.getChildAliases(clusterAlias),
-            scriptTxt,
-            List.of(new ImmutablePair<>("dashboards.id", docId)));
+      default -> {
+        List<String> indexNames = indexMapping.getChildAliases(clusterAlias);
+        if (!indexNames.isEmpty()) {
+          searchClient.softDeleteOrRestoreChildren(
+              indexMapping.getChildAliases(clusterAlias),
+              scriptTxt,
+              List.of(new ImmutablePair<>(entityType + ".id", docId)));
+        }
       }
-      default -> searchClient.softDeleteOrRestoreChildren(
-          indexMapping.getChildAliases(clusterAlias),
-          scriptTxt,
-          List.of(new ImmutablePair<>(entityType + ".id", docId)));
     }
   }
 
@@ -994,10 +1394,10 @@ public class SearchRepository {
         Map<String, Object> doc = JsonUtils.getMap(entity);
         fieldAddParams.put("newPipelineStatus", doc.get("pipelineStatus"));
       }
-      if (fieldChange.getName().equalsIgnoreCase("testSuites")) {
+      if (fieldChange.getName().equalsIgnoreCase(TEST_SUITES)) {
         scriptTxt.append("ctx._source.testSuites = params.testSuites;");
         Map<String, Object> doc = JsonUtils.getMap(entity);
-        fieldAddParams.put("testSuites", doc.get("testSuites"));
+        fieldAddParams.put(TEST_SUITES, doc.get(TEST_SUITES));
       }
     }
     return scriptTxt.toString();
@@ -1005,6 +1405,22 @@ public class SearchRepository {
 
   public Response search(SearchRequest request, SubjectContext subjectContext) throws IOException {
     return searchClient.search(request, subjectContext);
+  }
+
+  public Response previewSearch(
+      SearchRequest request, SubjectContext subjectContext, SearchSettings searchSettings)
+      throws IOException {
+    return searchClient.previewSearch(request, subjectContext, searchSettings);
+  }
+
+  public Response searchWithNLQ(SearchRequest request, SubjectContext subjectContext)
+      throws IOException {
+    return searchClient.searchWithNLQ(request, subjectContext);
+  }
+
+  public Response searchWithDirectQuery(SearchRequest request, SubjectContext subjectContext)
+      throws IOException {
+    return searchClient.searchWithDirectQuery(request, subjectContext);
   }
 
   public Response getDocument(String indexName, UUID entityId) throws IOException {
@@ -1070,9 +1486,31 @@ public class SearchRepository {
     return searchClient.searchLineage(lineageRequest);
   }
 
+  public SearchLineageResult searchPlatformLineage(
+      String alias, String queryFilter, boolean deleted) throws IOException {
+    return searchClient.searchPlatformLineage(alias, queryFilter, deleted);
+  }
+
   public SearchLineageResult searchLineageWithDirection(SearchLineageRequest lineageRequest)
       throws IOException {
     return searchClient.searchLineageWithDirection(lineageRequest);
+  }
+
+  public LineagePaginationInfo getLineagePaginationInfo(
+      String fqn,
+      int upstreamDepth,
+      int downstreamDepth,
+      String queryFilter,
+      boolean includeDeleted,
+      String entityType)
+      throws IOException {
+    return searchClient.getLineagePaginationInfo(
+        fqn, upstreamDepth, downstreamDepth, queryFilter, includeDeleted, entityType);
+  }
+
+  public SearchLineageResult searchLineageByEntityCount(EntityCountLineageRequest request)
+      throws IOException {
+    return searchClient.searchLineageByEntityCount(request);
   }
 
   public Response searchEntityRelationship(
@@ -1112,14 +1550,17 @@ public class SearchRepository {
             .withIsConnectedVia(isConnectedVia(entityType)));
   }
 
-  public Response searchByField(String fieldName, String fieldValue, String index)
+  public Response searchByField(String fieldName, String fieldValue, String index, Boolean deleted)
       throws IOException {
-    return searchClient.searchByField(fieldName, fieldValue, index);
+    return searchClient.searchByField(fieldName, fieldValue, index, deleted);
   }
 
-  public Response aggregate(String index, String fieldName, String value, String query)
-      throws IOException {
-    return searchClient.aggregate(index, fieldName, value, query);
+  public Response aggregate(AggregationRequest request) throws IOException {
+    return searchClient.aggregate(request);
+  }
+
+  public Response getEntityTypeCounts(SearchRequest request, String index) throws IOException {
+    return searchClient.getEntityTypeCounts(request, index);
   }
 
   public JsonObject aggregate(
@@ -1132,10 +1573,6 @@ public class SearchRepository {
   public DataQualityReport genericAggregation(
       String query, String index, SearchAggregation aggregationMetadata) throws IOException {
     return searchClient.genericAggregation(query, index, aggregationMetadata);
-  }
-
-  public Response suggest(SearchRequest request) throws IOException {
-    return searchClient.suggest(request);
   }
 
   public Response listDataInsightChartResult(
@@ -1162,17 +1599,18 @@ public class SearchRepository {
               ReindexingUtil.escapeDoubleQuotes(entityFQN));
 
       SearchRequest searchRequest =
-          new SearchRequest.ElasticSearchRequestBuilder(
-                  "*", size, Entity.getSearchRepository().getIndexOrAliasName(indexName))
-              .from(0)
-              .queryFilter(queryFilter)
-              .fetchSource(true)
-              .trackTotalHits(false)
-              .sortFieldParam("_score")
-              .deleted(false)
-              .sortOrder("desc")
-              .includeSourceFields(new ArrayList<>())
-              .build();
+          new SearchRequest()
+              .withQuery("")
+              .withSize(size)
+              .withIndex(Entity.getSearchRepository().getIndexOrAliasName(indexName))
+              .withFrom(0)
+              .withQueryFilter(queryFilter)
+              .withFetchSource(true)
+              .withTrackTotalHits(false)
+              .withSortFieldParam("_score")
+              .withDeleted(false)
+              .withSortOrder("desc")
+              .withIncludeSourceFields(new ArrayList<>());
 
       // Execute the search and parse the response
       Response response = search(searchRequest, null);
@@ -1181,12 +1619,13 @@ public class SearchRepository {
 
       // Extract hits from the response JSON and create entity references
       for (Iterator<JsonNode> it =
-              ((ArrayNode) JsonUtils.extractValue(json, "hits", "hits")).elements();
+              ((ArrayNode) Objects.requireNonNull(JsonUtils.extractValue(json, HITS, HITS)))
+                  .elements();
           it.hasNext(); ) {
         JsonNode jsonNode = it.next();
-        String id = JsonUtils.extractValue(jsonNode, "_source", "id");
-        String fqn = JsonUtils.extractValue(jsonNode, "_source", "fullyQualifiedName");
-        String type = JsonUtils.extractValue(jsonNode, "_source", "entityType");
+        String id = JsonUtils.extractValue(jsonNode, SEARCH_SOURCE, ID);
+        String fqn = JsonUtils.extractValue(jsonNode, SEARCH_SOURCE, FULLY_QUALIFIED_NAME);
+        String type = JsonUtils.extractValue(jsonNode, SEARCH_SOURCE, ENTITY_TYPE);
         if (!nullOrEmpty(fqn) && !nullOrEmpty(type)) {
           fqns.add(
               new EntityReference()
@@ -1211,7 +1650,97 @@ public class SearchRepository {
     String relationDocId = fromTableId.toString() + "-" + toTableId.toString();
     searchClient.updateChildren(
         GLOBAL_SEARCH_ALIAS,
-        new ImmutablePair<>("entityRelationship.docId.keyword", relationDocId),
-        new ImmutablePair<>(String.format(REMOVE_ENTITY_RELATIONSHIP, relationDocId), null));
+        new ImmutablePair<>("upstreamEntityRelationship.docId.keyword", relationDocId),
+        new ImmutablePair<>(
+            REMOVE_ENTITY_RELATIONSHIP, Collections.singletonMap("docId", relationDocId)));
+  }
+
+  public QueryCostSearchResult getQueryCostRecords(String serviceName) throws IOException {
+    return searchClient.getQueryCostRecords(serviceName);
+  }
+
+  public void initializeNLQService(ElasticSearchConfiguration config) {
+    try {
+      NaturalLanguageSearchConfiguration nlqConfig = config.getNaturalLanguageSearch();
+      if (nlqConfig != null && Boolean.TRUE.equals(nlqConfig.getEnabled())) {
+        nlqService = NLQServiceFactory.createNLQService(config);
+        LOG.info("Initialized NLQ service with provider: {}", nlqConfig.getProviderClass());
+      } else {
+        LOG.info("Natural language search is not enabled");
+      }
+    } catch (Exception e) {
+      LOG.error("Failed to initialize NLQ service", e);
+    }
+  }
+
+  /**
+   * Creates a BulkSink instance with vector embedding configuration.
+   * This method can be overridden in subclasses to provide different implementations.
+   */
+  public BulkSink createBulkSink(
+      int batchSize, int maxConcurrentRequests, long maxPayloadSizeBytes) {
+    ElasticSearchConfiguration.SearchType searchType = getSearchType();
+    if (searchType.equals(ElasticSearchConfiguration.SearchType.OPENSEARCH)) {
+      return new OpenSearchBulkSink(this, batchSize, maxConcurrentRequests, maxPayloadSizeBytes);
+    } else {
+      return new ElasticSearchBulkSink(this, batchSize, maxConcurrentRequests, maxPayloadSizeBytes);
+    }
+  }
+
+  /**
+   * Creates a ReindexHandler instance for recreate operations during reindexing.
+   * This method can be overridden in subclasses to provide different implementations.
+   */
+  public RecreateIndexHandler createReindexHandler() {
+    return new DefaultRecreateHandler();
+  }
+
+  /**
+   * Checks if vector embedding is enabled.
+   * This method can be overridden in subclasses to provide different configurations.
+   */
+  @SuppressWarnings("unused")
+  public boolean isVectorEmbeddingEnabled() {
+    return false;
+  }
+
+  @SuppressWarnings("unused")
+  public <T> T getHighLevelClient() {
+    return (T) searchClient.getHighLevelClient();
+  }
+
+  public SearchEntityRelationshipResult searchEntityRelationshipWithDirection(
+      SearchEntityRelationshipRequest entityRelationshipRequest) throws IOException {
+    return searchClient.searchEntityRelationshipWithDirection(entityRelationshipRequest);
+  }
+
+  public SearchEntityRelationshipResult searchEntityRelationship(
+      SearchEntityRelationshipRequest entityRelationshipRequest) throws IOException {
+    return searchClient.searchEntityRelationship(entityRelationshipRequest);
+  }
+
+  public org.openmetadata.schema.api.entityRelationship.SearchSchemaEntityRelationshipResult
+      getSchemaEntityRelationship(
+          String schemaFqn,
+          String queryFilter,
+          String includeSourceFields,
+          int offset,
+          int limit,
+          int from,
+          int size,
+          boolean deleted)
+          throws IOException {
+    return searchClient.getSchemaEntityRelationship(
+        schemaFqn, queryFilter, includeSourceFields, offset, limit, from, size, deleted);
+  }
+
+  private static List<EntityReference> copyWithInheritedFlag(List<EntityReference> references) {
+    if (references == null || references.isEmpty()) {
+      return new ArrayList<>();
+    }
+    List<EntityReference> inheritedReferences =
+        JsonUtils.deepCopyList(references, EntityReference.class);
+    inheritedReferences.forEach(ref -> ref.setInherited(true));
+    return inheritedReferences;
   }
 }
